// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default TagImage correctly rendered 1`] = `
<img
  alt="Tag"
  className="tag-img"
  onClick={undefined}
  src="/images/tagimage.png"
/>
`;

exports[`Transparent TagImage correctly rendered 1`] = `
<img
  alt="Tag"
  className="tag-img transparent-70"
  onClick={undefined}
  src="/images/tagimage.png"
/>
`;
